# air-link

./: .gitignore  .pre-commit-config.yaml  .syncignore  LICENSE  README.md  air_admin.service.j2  deploy.py  fix.py  host_environment.py  install.py  main.py  prime.py  pyproject.toml  requirements.txt  run.py  ssh.py  textfile.py
.github/workflows/: publish.yml
air_admin/: .syncignore  __init__.py  air_admin.service  install.py  main.py
air_admin/app/: authorized_keys.py  main_page.py  package.py  ssh.py
air_admin/utils/: run.py
air_link/: __init__.py  air-link.service  air_link.service  authorized_keys.py  install.py  main.py  main_page.py  network.py  package.py  requirements.txt  run.py  ssh.py  system.py  version.py
air_link/app/: __init__.py  main_page.py  package.py  ssh.py  system.py
air_link/utils/: __init__.py
authorized_keys/: README.md
capabilities/: __init__.py  buildx.py  capability.py
tests/: test_textfile.py
