[tool.poetry]
name = "air-link"
version = "0.0.1"
description = "Provide SSH access, diagnostics and administration for your edge devices."
authors = ["Zauberzeug GmbH <info@zauberzeug.com>"]
readme = "README.md"
repository = "https://github.com/zauberzeug/air-link"

[tool.poetry.dependencies]
python = "^3.8.2"
typer = "^0.12.0"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]
pre-commit = "^3.7.0"

[tool.ruff]
indent-width = 4
line-length = 120

[tool.ruff.lint]
select = [
    "I",  # isort
    "E",  # pycodestyle
    "W",  # pycodestyle
    "B",  # bugbear
    "F",  # pyflakes
    "UP", # pyupgrade
    "RUF", # ruff
    "PL", # pylint
]
fixable = [
    "I",  # isort
]
ignore = [
    "PLR2004", # magic value comparison
]
