[tool.poetry]
name = "air-link"
version = "0.3.0"
description = "Provide SSH access, diagnostics and administration for your edge devices."
authors = ["Zauberzeug GmbH <info@zauberzeug.com>"]
readme = "README.md"
repository = "https://github.com/zauberzeug/air-link"

[tool.poetry.dependencies]
python = "^3.8.2"
nicegui = "^2.0.1"
docker = "^7.1.0"
docutils = "0.20.1"  # fixes the error "Package docutils (0.21.post1) not found."

[tool.poetry.dev-dependencies]
pre-commit = "^3.5.0"

[tool.poetry.scripts]
air-link = "air_link.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
indent-width = 4
line-length = 120

[tool.ruff.lint]
select = [
    "I",  # isort
    "E",  # pycodestyle
    "W",  # pycodestyle
    "B",  # bugbear
    "F",  # pyflakes
    "UP", # pyupgrade
    "RUF", # ruff
    "PL", # pylint
]
fixable = [
    "I",  # isort
]
ignore = [
    "PLR2004", # magic value comparison
]

[[tool.mypy.overrides]]
module = ["docker"]
ignore_missing_imports = true
